// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContactForm should select 1`] = `
<DocumentFragment>
  <form
    class="space-y-8"
    data-testid="contact-form"
  >
    <fieldset
      class="sc-AxiKw iQzisX flex flex-col space-y-2"
    >
      <label
        class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
        data-testid="FormLabel"
        for="name"
      >
        Name
        <div
          class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
          data-testid="FormLabel__required"
        />
      </label>
      <input
        class="sc-AxhUy cfVsXn overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 dark:border-theme-neutral-800 text-theme-text transition-colors duration-200 px-4 py-3 "
        data-testid="contact-form__name-input"
        name="name"
        value=""
      />
    </fieldset>
    <div
      class="SubForm__SubFormWrapper-c4tqfs-0 jZidsI"
    >
      <fieldset
        class="sc-AxiKw iQzisX flex flex-col space-y-2"
      >
        <label
          class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
          data-testid="FormLabel"
          for="network"
        >
          Cryptoasset
          <div
            class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
            data-testid="FormLabel__required"
          />
        </label>
        <div>
          <div
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-owns="ContactForm__network-menu"
            data-testid="SelectNetwork"
            role="combobox"
          >
            <label
              for="ContactForm__network-input"
              id="ContactForm__network-label"
            />
            <div
              class="sc-AxmLO kuiknc"
              data-testid="SelectNetworkInput"
            >
              <div
                class="sc-AxgMl sc-AxheI hUEXQW px-4"
              >
                <div
                  class="sc-fzplWN bjoBgQ border-theme-neutral-light text-theme-neutral"
                  data-testid="SelectNetworkInput__network"
                />
              </div>
              <input
                aria-autocomplete="list"
                aria-controls="ContactForm__network-menu"
                aria-labelledby="ContactForm__network-label"
                autocomplete="off"
                class="sc-AxhUy cfVsXn overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 dark:border-theme-neutral-800 text-theme-text transition-colors duration-200 px-4 py-3 pl-15"
                data-testid="SelectNetworkInput__input"
                id="ContactForm__network-input"
                placeholder="Enter a cryptoasset name"
                value=""
              />
            </div>
          </div>
          <ul
            aria-labelledby="ContactForm__network-label"
            class="hidden"
            id="ContactForm__network-menu"
            role="listbox"
          />
        </div>
      </fieldset>
      <fieldset
        class="sc-AxiKw iQzisX flex flex-col space-y-2"
        data-testid="ContactForm__address"
      >
        <label
          class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
          data-testid="FormLabel"
          for="address"
        >
          Address
          <div
            class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
            data-testid="FormLabel__required"
          />
        </label>
        <div
          class="sc-AxmLO kuiknc max-w-20"
        >
          <input
            class="sc-AxhUy cfVsXn overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 dark:border-theme-neutral-800 text-theme-text transition-colors duration-200 px-4 py-3 pr-12"
            data-testid="contact-form__address-input"
            name="address"
            type="text"
          />
          <div
            class="sc-AxgMl sc-Axmtr hWILTO my-px mr-4"
          >
            <button
              class="flex justify-center items-center w-full h-full text-2xl focus:outline-none text-theme-primary-400"
              data-testid="InputAddress__qr-button"
              type="button"
            >
              <div
                class="sc-AxhCb VoPpj"
                height="20"
                width="20"
              >
                <svg>
                  qr-code.svg
                </svg>
              </div>
            </button>
          </div>
        </div>
      </fieldset>
      <div
        class="mt-4"
      >
        <button
          class="sc-AxirZ hTzPEr w-full"
          color="primary"
          data-testid="contact-form__add-address-btn"
          disabled=""
          type="button"
        >
          Add address
        </button>
      </div>
    </div>
    <div
      class="flex w-full justify-end"
    >
      <div
        class="space-x-3"
      >
        <button
          class="sc-AxirZ hTzPEr"
          color="primary"
          data-testid="contact-form__cancel-btn"
          type="button"
        >
          Cancel
        </button>
        <button
          class="sc-AxirZ hNClQs"
          color="primary"
          data-testid="contact-form__save-btn"
          disabled=""
          type="submit"
        >
          Save
        </button>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`ContactForm should select with errors 1`] = `
<DocumentFragment>
  <form
    class="space-y-8"
    data-testid="contact-form"
  >
    <fieldset
      class="sc-AxiKw HGhoX flex flex-col space-y-2"
    >
      <label
        class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
        data-testid="FormLabel"
        for="name"
      >
        Name
        <div
          class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
          data-testid="FormLabel__required"
        />
      </label>
      <input
        aria-invalid="true"
        class="sc-AxhUy cfVsXn overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 dark:border-theme-neutral-800 text-theme-text transition-colors duration-200 px-4 py-3 "
        data-testid="contact-form__name-input"
        name="name"
        value=""
      />
      <p
        class="text-sm text-theme-danger"
      >
        Contact name error
      </p>
    </fieldset>
    <div
      class="SubForm__SubFormWrapper-c4tqfs-0 jZidsI"
    >
      <fieldset
        class="sc-AxiKw iQzisX flex flex-col space-y-2"
      >
        <label
          class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
          data-testid="FormLabel"
          for="network"
        >
          Cryptoasset
          <div
            class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
            data-testid="FormLabel__required"
          />
        </label>
        <div>
          <div
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-owns="ContactForm__network-menu"
            data-testid="SelectNetwork"
            role="combobox"
          >
            <label
              for="ContactForm__network-input"
              id="ContactForm__network-label"
            />
            <div
              class="sc-AxmLO kuiknc"
              data-testid="SelectNetworkInput"
            >
              <div
                class="sc-AxgMl sc-AxheI hUEXQW px-4"
              >
                <div
                  class="sc-fzplWN bjoBgQ border-theme-neutral-light text-theme-neutral"
                  data-testid="SelectNetworkInput__network"
                />
              </div>
              <input
                aria-autocomplete="list"
                aria-controls="ContactForm__network-menu"
                aria-labelledby="ContactForm__network-label"
                autocomplete="off"
                class="sc-AxhUy cfVsXn overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 dark:border-theme-neutral-800 text-theme-text transition-colors duration-200 px-4 py-3 pl-15"
                data-testid="SelectNetworkInput__input"
                id="ContactForm__network-input"
                placeholder="Enter a cryptoasset name"
                value=""
              />
            </div>
          </div>
          <ul
            aria-labelledby="ContactForm__network-label"
            class="hidden"
            id="ContactForm__network-menu"
            role="listbox"
          />
        </div>
      </fieldset>
      <fieldset
        class="sc-AxiKw iQzisX flex flex-col space-y-2"
        data-testid="ContactForm__address"
      >
        <label
          class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
          data-testid="FormLabel"
          for="address"
        >
          Address
          <div
            class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
            data-testid="FormLabel__required"
          />
        </label>
        <div
          class="sc-AxmLO kuiknc max-w-20"
        >
          <input
            class="sc-AxhUy cfVsXn overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 dark:border-theme-neutral-800 text-theme-text transition-colors duration-200 px-4 py-3 pr-12"
            data-testid="contact-form__address-input"
            name="address"
            type="text"
          />
          <div
            class="sc-AxgMl sc-Axmtr hWILTO my-px mr-4"
          >
            <button
              class="flex justify-center items-center w-full h-full text-2xl focus:outline-none text-theme-primary-400"
              data-testid="InputAddress__qr-button"
              type="button"
            >
              <div
                class="sc-AxhCb VoPpj"
                height="20"
                width="20"
              >
                <svg>
                  qr-code.svg
                </svg>
              </div>
            </button>
          </div>
        </div>
      </fieldset>
      <div
        class="mt-4"
      >
        <button
          class="sc-AxirZ hTzPEr w-full"
          color="primary"
          data-testid="contact-form__add-address-btn"
          disabled=""
          type="button"
        >
          Add address
        </button>
      </div>
    </div>
    <div
      class="flex w-full justify-end"
    >
      <div
        class="space-x-3"
      >
        <button
          class="sc-AxirZ hTzPEr"
          color="primary"
          data-testid="contact-form__cancel-btn"
          type="button"
        >
          Cancel
        </button>
        <button
          class="sc-AxirZ hNClQs"
          color="primary"
          data-testid="contact-form__save-btn"
          disabled=""
          type="submit"
        >
          Save
        </button>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`ContactForm when creating a new contact should render the form 1`] = `
<DocumentFragment>
  <form
    class="space-y-8"
    data-testid="contact-form"
  >
    <fieldset
      class="sc-AxiKw iQzisX flex flex-col space-y-2"
    >
      <label
        class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
        data-testid="FormLabel"
        for="name"
      >
        Name
        <div
          class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
          data-testid="FormLabel__required"
        />
      </label>
      <input
        class="sc-AxhUy cfVsXn overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 dark:border-theme-neutral-800 text-theme-text transition-colors duration-200 px-4 py-3 "
        data-testid="contact-form__name-input"
        name="name"
        value=""
      />
    </fieldset>
    <div
      class="SubForm__SubFormWrapper-c4tqfs-0 jZidsI"
    >
      <fieldset
        class="sc-AxiKw iQzisX flex flex-col space-y-2"
      >
        <label
          class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
          data-testid="FormLabel"
          for="network"
        >
          Cryptoasset
          <div
            class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
            data-testid="FormLabel__required"
          />
        </label>
        <div>
          <div
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-owns="ContactForm__network-menu"
            data-testid="SelectNetwork"
            role="combobox"
          >
            <label
              for="ContactForm__network-input"
              id="ContactForm__network-label"
            />
            <div
              class="sc-AxmLO kuiknc"
              data-testid="SelectNetworkInput"
            >
              <div
                class="sc-AxgMl sc-AxheI hUEXQW px-4"
              >
                <div
                  class="sc-fzplWN bjoBgQ border-theme-neutral-light text-theme-neutral"
                  data-testid="SelectNetworkInput__network"
                />
              </div>
              <input
                aria-autocomplete="list"
                aria-controls="ContactForm__network-menu"
                aria-labelledby="ContactForm__network-label"
                autocomplete="off"
                class="sc-AxhUy cfVsXn overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 dark:border-theme-neutral-800 text-theme-text transition-colors duration-200 px-4 py-3 pl-15"
                data-testid="SelectNetworkInput__input"
                id="ContactForm__network-input"
                placeholder="Enter a cryptoasset name"
                value=""
              />
            </div>
          </div>
          <ul
            aria-labelledby="ContactForm__network-label"
            class="hidden"
            id="ContactForm__network-menu"
            role="listbox"
          />
        </div>
      </fieldset>
      <fieldset
        class="sc-AxiKw iQzisX flex flex-col space-y-2"
        data-testid="ContactForm__address"
      >
        <label
          class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
          data-testid="FormLabel"
          for="address"
        >
          Address
          <div
            class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
            data-testid="FormLabel__required"
          />
        </label>
        <div
          class="sc-AxmLO kuiknc max-w-20"
        >
          <input
            class="sc-AxhUy cfVsXn overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 dark:border-theme-neutral-800 text-theme-text transition-colors duration-200 px-4 py-3 pr-12"
            data-testid="contact-form__address-input"
            name="address"
            type="text"
          />
          <div
            class="sc-AxgMl sc-Axmtr hWILTO my-px mr-4"
          >
            <button
              class="flex justify-center items-center w-full h-full text-2xl focus:outline-none text-theme-primary-400"
              data-testid="InputAddress__qr-button"
              type="button"
            >
              <div
                class="sc-AxhCb VoPpj"
                height="20"
                width="20"
              >
                <svg>
                  qr-code.svg
                </svg>
              </div>
            </button>
          </div>
        </div>
      </fieldset>
      <div
        class="mt-4"
      >
        <button
          class="sc-AxirZ hTzPEr w-full"
          color="primary"
          data-testid="contact-form__add-address-btn"
          disabled=""
          type="button"
        >
          Add address
        </button>
      </div>
    </div>
    <div
      class="flex w-full justify-end"
    >
      <div
        class="space-x-3"
      >
        <button
          class="sc-AxirZ hTzPEr"
          color="primary"
          data-testid="contact-form__cancel-btn"
          type="button"
        >
          Cancel
        </button>
        <button
          class="sc-AxirZ hNClQs"
          color="primary"
          data-testid="contact-form__save-btn"
          disabled=""
          type="submit"
        >
          Save
        </button>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`ContactForm when editing an existing contact should render the form 1`] = `
<DocumentFragment>
  <form
    class="space-y-8"
    data-testid="contact-form"
  >
    <fieldset
      class="sc-AxiKw iQzisX flex flex-col space-y-2"
    >
      <label
        class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
        data-testid="FormLabel"
        for="name"
      >
        Name
        <div
          class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
          data-testid="FormLabel__required"
        />
      </label>
      <input
        class="sc-AxhUy cfVsXn overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 dark:border-theme-neutral-800 text-theme-text transition-colors duration-200 px-4 py-3 "
        data-testid="contact-form__name-input"
        name="name"
        value="Brian"
      />
    </fieldset>
    <div
      class="SubForm__SubFormWrapper-c4tqfs-0 jZidsI"
    >
      <fieldset
        class="sc-AxiKw iQzisX flex flex-col space-y-2"
      >
        <label
          class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
          data-testid="FormLabel"
          for="network"
        >
          Cryptoasset
          <div
            class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
            data-testid="FormLabel__required"
          />
        </label>
        <div>
          <div
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-owns="ContactForm__network-menu"
            data-testid="SelectNetwork"
            role="combobox"
          >
            <label
              for="ContactForm__network-input"
              id="ContactForm__network-label"
            />
            <div
              class="sc-AxmLO kuiknc"
              data-testid="SelectNetworkInput"
            >
              <div
                class="sc-AxgMl sc-AxheI hUEXQW px-4"
              >
                <div
                  class="sc-fzplWN bjoBgQ border-theme-neutral-light text-theme-neutral"
                  data-testid="SelectNetworkInput__network"
                />
              </div>
              <input
                aria-autocomplete="list"
                aria-controls="ContactForm__network-menu"
                aria-labelledby="ContactForm__network-label"
                autocomplete="off"
                class="sc-AxhUy cfVsXn overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 dark:border-theme-neutral-800 text-theme-text transition-colors duration-200 px-4 py-3 pl-15"
                data-testid="SelectNetworkInput__input"
                id="ContactForm__network-input"
                placeholder="Enter a cryptoasset name"
                value=""
              />
            </div>
          </div>
          <ul
            aria-labelledby="ContactForm__network-label"
            class="hidden"
            id="ContactForm__network-menu"
            role="listbox"
          />
        </div>
      </fieldset>
      <fieldset
        class="sc-AxiKw iQzisX flex flex-col space-y-2"
        data-testid="ContactForm__address"
      >
        <label
          class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
          data-testid="FormLabel"
          for="address"
        >
          Address
          <div
            class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
            data-testid="FormLabel__required"
          />
        </label>
        <div
          class="sc-AxmLO kuiknc max-w-20"
        >
          <input
            class="sc-AxhUy cfVsXn overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 dark:border-theme-neutral-800 text-theme-text transition-colors duration-200 px-4 py-3 pr-12"
            data-testid="contact-form__address-input"
            name="address"
            type="text"
          />
          <div
            class="sc-AxgMl sc-Axmtr hWILTO my-px mr-4"
          >
            <button
              class="flex justify-center items-center w-full h-full text-2xl focus:outline-none text-theme-primary-400"
              data-testid="InputAddress__qr-button"
              type="button"
            >
              <div
                class="sc-AxhCb VoPpj"
                height="20"
                width="20"
              >
                <svg>
                  qr-code.svg
                </svg>
              </div>
            </button>
          </div>
        </div>
      </fieldset>
      <div
        class="mt-4"
      >
        <button
          class="sc-AxirZ hTzPEr w-full"
          color="primary"
          data-testid="contact-form__add-address-btn"
          disabled=""
          type="button"
        >
          Add address
        </button>
      </div>
    </div>
    <div
      class="group"
    >
      <span
        class="inline-block text-sm font-semibold transition-colors duration-100 group-hover:text-theme-primary text-theme-secondary-text"
      >
        Addresses
      </span>
      <div
        data-testid="contact-form__address-list"
      >
        <div
          class="flex items-center py-4 border-b border-dashed border-theme-neutral-300 dark:border-theme-neutral-800"
          data-testid="contact-form__address-list-item"
        >
          <div
            class="mr-4"
          >
            <div
              class="flex items-center -space-x-1"
            >
              <div
                aria-label="ARK Devnet"
                class="sc-fzplWN jUnIkq border-theme-primary-100 text-theme-primary-400"
                data-testid="NetworkIcon-ARK-ark.devnet"
              >
                <div
                  class="sc-AxhCb VoPpj"
                  data-testid="NetworkIcon__icon"
                  height="20"
                  width="20"
                >
                  <svg>
                    ark.svg
                  </svg>
                </div>
              </div>
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full"
                >
                  <img
                    alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                    title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                  />
                </div>
              </div>
            </div>
          </div>
          <span
            class="font-semibold"
          >
            <div
              class="inline-flex items-center"
            >
              <span
                class="sc-AxjAm StDqN text-theme-text truncate font-semibold text-base"
                data-testid="address__wallet-address"
              >
                D61mfSggzb … oHaqJ3Dyib
              </span>
            </div>
          </span>
          <button
            class="sc-AxirZ kpZmAz flex items-center ml-auto"
            color="primary"
            data-testid="contact-form__remove-address-btn"
            type="button"
          >
            <div
              class="sc-AxhCb fxrKLH"
              height="1em"
              width="1em"
            >
              <svg>
                trash.svg
              </svg>
            </div>
          </button>
        </div>
      </div>
    </div>
    <div
      class="flex w-full justify-between"
    >
      <button
        class="sc-AxirZ gfCA-dQ"
        color="danger"
        data-testid="contact-form__delete-btn"
        type="button"
      >
        <div
          class="sc-AxhCb fxrKLH"
          height="1em"
          width="1em"
        >
          <svg>
            trash.svg
          </svg>
        </div>
        <span>
          Delete Contact
        </span>
      </button>
      <div
        class="space-x-3"
      >
        <button
          class="sc-AxirZ hTzPEr"
          color="primary"
          data-testid="contact-form__cancel-btn"
          type="button"
        >
          Cancel
        </button>
        <button
          class="sc-AxirZ hNClQs"
          color="primary"
          data-testid="contact-form__save-btn"
          disabled=""
          type="submit"
        >
          Save
        </button>
      </div>
    </div>
  </form>
</DocumentFragment>
`;
